@@ -1,9 +1,9 @@
-# @(#)Ident: CreatingDistributions.pm 2013-05-04 17:28 pjf ;
+# @(#)Ident: CreatingDistributions.pm 2013-05-06 10:46 pjf ;
 
 package Module::Provision::TraitFor::CreatingDistributions;
 
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.11.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.11.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Moose::Role;
 use Class::Usul::Constants;
@@ -142,7 +142,7 @@ sub _project_file_path {
 
 # Private functions
 sub __chdir {
-   $_[ 0 ] or throw 'Directory not specified'; chdir $_[ 0 ];
+   $_[ 0 ] or throw 'Directory not specified in __chdir'; chdir $_[ 0 ];
    $_[ 0 ] eq getcwd or throw error => 'Path [_1] cannot change to',
                               args  => [ $_[ 0 ] ];
    return $_[ 0 ];
@@ -169,7 +169,7 @@ Module::Provision::TraitFor::CreatingDistributions - Create distributions
 
 =head1 Version
 
-This documents version v0.11.$Rev: 1 $ of L<Module::Provision::TraitFor::CreatingDistributions>
+This documents version v0.11.$Rev: 2 $ of L<Module::Provision::TraitFor::CreatingDistributions>
 
 =head1 Description
 
